--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "grunt-newer": "~0.7.0",
     "time-grunt": "~0.3.1",
     "load-grunt-tasks": "~0.4.0",
-    "coffee-script": "^1.7.1"
+    "coffee-script": "^1.7.1",
+    "marked-toc" : "*"
   },
   "keywords": [
     "gruntplugin",
